--- a/NetRunner_android/app/src/main/AndroidManifest.xml
+++ b/NetRunner_android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 
     <application
         android:allowBackup="true"
