--- a/NetRunner_android/app/build.gradle
+++ b/NetRunner_android/app/build.gradle
@@ -31,11 +31,7 @@ android {
     }
 }
 
-repositories {
-    maven {
-        url 'https://google.bintray.com/tensorflow'
-    }
-}
+
 
 
 dependencies {
@@ -57,7 +53,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
 
+    implementation project(":tensorio-debug")
+
     // Tensorflow dependency
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-gpu-experimental'
+
 }
 
