--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     // Tensor/IO Dependency
-    implementation 'com.github.doc-ai:tensorio-android:0.9.3'
+    implementation 'com.github.doc-ai:tensorio-android:c8bd8fcd9838680339bcc3c7d1c0b2dc41ef6a32'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
