update tio and fix code, some cleanup

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
     }
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -49,6 +50,7 @@ allprojects {
 }
 
 dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -66,7 +68,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     // Tensor/IO Dependency
-    implementation 'com.github.doc-ai:tensorio-android:0.9.3'
+    implementation 'com.github.doc-ai:tensorio-android:5c832bd9b36b5a8c1853d248f65d38440ef029c7'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
