--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     // Tensor/IO Dependency
-    implementation 'com.github.doc-ai:tensorio-android:1bba798eb72506a29f34284584ffb2d081610955'
+    implementation 'com.github.doc-ai:tensorio-android:0.9.5'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
