--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.1.0'
-    implementation 'com.github.doc-ai:tensorio-android:e0087289d30e2671addee76d8625a636adb63224'
+    implementation 'com.github.doc-ai:tensorio-android:0.9.6'
 
     testImplementation 'junit:junit:4.13'
 
