--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.1.0'
-    implementation 'com.github.doc-ai:tensorio-android:0.9.6'
+    implementation 'com.github.doc-ai:tensorio-android:b21ac9f1cff15c40953278db4b578c96431e8663'
 
     testImplementation 'junit:junit:4.13'
 
