--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
+    buildscript {
+        ext.kotlin_version = '1.3.71'
+    }
+
     packagingOptions {
         pickFirst 'META-INF/ASL-2.0.txt'
         pickFirst 'draftv4/schema'
@@ -63,6 +67,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
     implementation 'com.github.doc-ai:tensorio-android:b21ac9f1cff15c40953278db4b578c96431e8663'
 
     testImplementation 'junit:junit:4.13'
