--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
-    implementation 'com.github.doc-ai:tensorio-android:0.9.8'
+
+    implementation 'com.github.doc-ai.tensorio-android:core:0.9.9'
+    implementation 'com.github.doc-ai.tensorio-android:tflite:0.9.9'
 
     testImplementation 'junit:junit:4.13'
 
