--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,17 @@ android {
         applicationId "ai.doc.netrunner_android"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.1.1"
+        versionCode 4
+        versionName "1.1.2"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
         release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -54,8 +58,8 @@ allprojects {
 
 dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -69,8 +73,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
 
-    implementation 'com.github.doc-ai.tensorio-android:core:0.9.11'
-    implementation 'com.github.doc-ai.tensorio-android:tflite:0.9.11'
+    implementation 'com.github.doc-ai.tensorio-android:core:d22a981feecf08fef5c02324948120626fc8bd04'
+    implementation 'com.github.doc-ai.tensorio-android:tflite:d22a981feecf08fef5c02324948120626fc8bd04'
 
     testImplementation 'junit:junit:4.13'
 
